fix: reduce scrollbar size

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -171,8 +171,8 @@ a {
 
 /* Scrollbar */
 ::-webkit-scrollbar {
-  width: 8px;
-  height: 8px;
+  width: 4px;
+  height: 4px;
 }
 
 ::-webkit-scrollbar-track {
